--- a/src/style.css
+++ b/src/style.css
@@ -760,7 +760,8 @@ input.checkbox:checked:after {
   .main-w3layouts {
     padding: 1em 0 0;
   }
-  .error::-webkit-input-placeholder{
-    color: red;
-  }
+}
+
+.error::placeholder{
+  color: red;
 }
